Corrected typo in 'partner'

--- a/vignettes/partner_ref_list.Rmd
+++ b/vignettes/partner_ref_list.Rmd
@@ -88,13 +88,13 @@ tldata %>%
 tldata %>% 
   select(partner) %>% 
   distinct() %>% 
-  mutate(fao = convertTLParnterToFAO(partner)) %>% 
+  mutate(fao = convertTLPartnerToFAO(partner)) %>% 
   filter(is.na(fao))
 
 tldata %>% 
   select(reporter) %>% 
   distinct() %>% 
-  mutate(fao = convertTLParnterToFAO(reporter)) %>% 
+  mutate(fao = convertTLPartnerToFAO(reporter)) %>% 
   filter(is.na(fao)) %>% 
   arrange(reporter)
 
